--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -46,6 +46,7 @@
 
 .products__item {
   background-color: #f2f2f2;
+
   &--button {
     margin-left: 20px;
     margin-right: 20px;
@@ -76,6 +77,6 @@
   padding-left: 20px;
   padding-right: 30px;
   padding-bottom: 21px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   text-align: left;
 }
