Доработки по началу верстки с препроцессорами

--- a/source/less/blocks/goods.less
+++ b/source/less/blocks/goods.less
@@ -13,15 +13,17 @@
   .order-reset();
 }
 
-.goods__item-wrapper {
-  text-align: center;
-}
-
 .goods__item {
+  padding-left: 20px;
+  padding-right: 20px;
   padding-bottom: 24px;
   border-bottom: 1px solid #f2f2f2;
   font-size: 16px;
   line-height: 20px;
+}
+
+.goods__item-wrapper {
+  text-align: center;
 }
 
 .goods__item-name {
