--- a/source/less/blocks/extras.less
+++ b/source/less/blocks/extras.less
@@ -6,7 +6,6 @@
 .extras__title {
   margin: 0;
   padding: 30px 0;
-  text-align: center;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
@@ -22,6 +21,7 @@
   padding-bottom: 17px;
   color: #000000;
   border-bottom: 1px solid #f2f2f2;
+  text-decoration: none;
 }
 
 .extras__item-wrapper {
@@ -36,4 +36,5 @@
 .extras__item-name {
   font-size: 16px;
   line-height: 16px;
+  text-transform: uppercase;
 }
