--- a/source/less/blocks/main-navigation.less
+++ b/source/less/blocks/main-navigation.less
@@ -10,6 +10,7 @@
   display: block;
   font-size: 20px;
   font-weight: 700;
+  color: #000000;
   line-height: 20px;
   padding-top: 24px;
   padding-bottom: 24px;
