--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -37,6 +37,13 @@
   line-height: 18px;
   font-weight: 400;
   text-transform: uppercase;
+
+  &--item {
+    margin-bottom: 30px;
+    margin-top: 31px;
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .order__form-list {
