--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,26 +1,72 @@
 .advantages {
   margin-bottom: 42px;
-  margin-left: 20px;
-  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .advantages__title {
   margin: 0;
   margin-bottom: 35px;
-  font-size: 36px;
   font-weight: 400;
+  font-size: 36px;
   line-height: 60px;
 }
 
 .advantages__list {
   .order-reset();
+  display: flex;
+  flex-direction: column;
   padding-left: 80px;
   font-family: "Arial", sans-serif;
-  font-size: 14px;
   line-height: 18px;
 }
 
 .advantages__item {
   margin-bottom: 20px;
   padding-top: 6px;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    width: auto;
+    margin: 0;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 0;
+    border-bottom: 1px solid @border-color;
+  }
+
+  .advantages__title {
+    margin-bottom: 63px;
+    font-size: 60px;
+  }
+
+  .advantages__list {
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .advantages__item {
+    width: 354px;
+    margin-bottom: 90px;
+    padding-top: 108px;
+    padding-bottom: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    padding-right: 110px;
+    padding-left: 110px;
+    border-bottom: none;
+  }
+
+  .advantages__item {
+    width: 245px;
+    margin-bottom: 80px;
+  }
 }
