--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,14 +1,14 @@
 .button {
+  box-sizing: border-box;
   display: block;
   padding: 0;
   padding-top: 14px;
   padding-bottom: 11px;
-  background-color: #68b738;
-  font-size: 14px;
+  background-color: @main-color-button;
   line-height: 18px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #ffffff;
+  color: @font-color-button;
 
   &--order {
     font-size: 16px;
@@ -23,7 +23,6 @@
     color: #444444;
     font-size: 16px;
     line-height: 20px;
-    font-weight: 400;
   }
 
   &--submit {
@@ -32,5 +31,36 @@
     box-shadow: none;
     font-size: 16px;
     line-height: 20px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .button--products {
+    width: 260px;
+    margin-right: auto;
+    margin-left: 90px;
+    padding-right: 25px;
+    padding-left: 25px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .button--submit {
+    width: 283px;
+    font-size: 20px;
+    margin-right: 62px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .button--extra {
+    width: 245px;
+  }
+
+  .button--submit {
+    width: 568px;
+    margin-right: 82px;
   }
 }
