--- a/source/less/blocks/extras.less
+++ b/source/less/blocks/extras.less
@@ -1,4 +1,7 @@
 .extras {
+  width: 320px;
+  box-sizing: border-box;
+  margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -8,33 +11,146 @@
   padding: 30px 0;
   font-size: 24px;
   line-height: 24px;
-  font-weight: 400;
 }
 
 .extras__list {
+  display: flex;
+  flex-direction: column;
   .order-reset();
-  border-top: 1px solid #f2f2f2;
+  border-top: 1px solid @border-color;
 }
 
 .extras__item {
   padding-top: 14px;
   padding-bottom: 17px;
-  color: #000000;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid @border-color;
   text-decoration: none;
 }
 
-.extras__item-wrapper {
+.extras__item-price-wrapper {
+  display: flex;
+  justify-content: space-between;
   margin-top: 15px;
   margin-bottom: 14px;
-  font-family: "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 14px;
-  color: #444444;
 }
 
 .extras__item-name {
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
+}
+
+.extras__item-price {
+  font-family: "Arial", sans-serif;
+  color: @color-extra;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+@media (min-width: @tablet-width) {
+  .extras {
+    box-sizing: border-box;
+    width: 768px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .extras__title {
+    font-size: 36px;
+    line-height: 36px;
+    padding-left: 35px;
+    padding-bottom: 75px;
+  }
+
+  .extras__list {
+    border: 1px solid #cdcdcd;
+  }
+
+  .extras__item {
+    padding: 28px;
+    border-bottom: 1px solid #cdcdcd;
+
+    &:last-of-type {
+      border: none;
+    }
+  }
+
+  .extras__item-name {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .extras__item-price {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .extras__item-price-wrapper {
+    width: 228px;
+    margin: 0;
+    padding-bottom: 27px;
+  }
+
+  .extras__item-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .extras {
+    width: auto;
+    margin: 0;
+    padding-left: 110px;
+    padding-right: 110px;
+  }
+
+  .extras__title {
+    padding-top: 0;
+    padding-left: 0;
+    padding-bottom: 75px;
+  }
+
+  .extras__wrapper {
+    display: flex;
+  }
+
+  .extras__item-wrapper {
+    width: 652px;
+  }
+
+  .extras__item-price-wrapper {
+    width: 285px;
+    margin-right: 39px;
+    padding-bottom: 0;
+  }
+
+  .extras__list {
+    margin-right: 80px;
+    margin-bottom: 73px;
+    border: none;
+    border-bottom: 1px solid #cdcdcd;
+    border-top: 1px solid #cdcdcd;
+  }
+
+  .extras__item {
+    display: flex;
+    justify-content: space-between;
+    width: 895px;
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 14px;
+    padding-bottom: 15px;
+  }
+
+  .extras__item-name {
+    width: 245px;
+    margin-right: 40px;
+    align-self: center;
+  }
+
+  .extras__item-price {
+    align-self: center;
+  }
 }
