--- a/source/less/blocks/goods.less
+++ b/source/less/blocks/goods.less
@@ -1,23 +1,34 @@
+.goods {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .goods__title {
   margin: 0;
   padding-top: 25px;
-  padding-bottom: 29px;
+  padding-bottom: 9px;
   font-size: 36px;
   line-height: 60px;
-  font-weight: 400;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid @border-color;
   text-align: center;
 }
 
 .goods__list {
   .order-reset();
+  display: flex;
+  flex-direction: column;
 }
 
 .goods__item {
-  padding-left: 20px;
-  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
   padding-bottom: 24px;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid @border-color;
   font-size: 16px;
   line-height: 20px;
 }
@@ -28,7 +39,6 @@
 
 .goods__item-name {
   margin: 0;
-  color: #000000;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -62,4 +72,105 @@
   padding-top: 26px;
   padding-bottom: 26px;
   text-align: center;
+}
+
+@media (min-width: @tablet-width) {
+  .goods {
+    width: auto;
+    padding: 0;
+  }
+
+  .goods__title {
+    padding-left: 35px;
+    padding-top: 70px;
+    padding-bottom: 0;
+    font-size: 60px;
+    border: none;
+    text-align: left;
+  }
+
+  .goods__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 70px;
+  }
+
+  .goods__item {
+    box-sizing: border-box;
+    width: 324px;
+    padding-right: 38px;
+    padding-left: 38px;
+    padding-bottom: 40px;
+    margin-top: 140px;
+    margin-right: 30px;
+    margin-left: 30px;
+    background-color: @border-color;
+    border: none;
+
+    &:last-child {
+      background-color: @bg-color;
+      border: 1px solid #cdcdcd;
+    }
+  }
+
+  .goods__item a {
+    text-align: center;
+  }
+
+  .goods__item-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .goods__item-description {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .goods__item-name {
+    font-size: 20px;
+    padding-bottom: 25px;
+  }
+
+  .goods__item-param {
+    margin-bottom: 32px;
+    font-size: 16px;
+    border-collapse: collapse;
+    border: none;
+
+    &--left,
+    &--right {
+      border-bottom: 1px solid #818181;
+      padding-top: 9px;
+      padding-bottom: 8px;
+    }
+  }
+
+  .goods__link {
+    padding-top: 55px;
+    padding-bottom: 50px;
+  }
+
+  .goods__item-text {
+    padding-bottom: 85px;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .goods {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .goods__list {
+    margin-bottom: 79px;
+  }
+
+  .goods__item {
+    width: 245px;
+    margin-right: 40px;
+    margin-left: 40px;
+  }
 }
