--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,47 @@
+.page-header {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  margin: 0 auto;
+}
+
 .page-header__logo {
-  display: block;
-  margin-left: 20px;
   margin-top: 11px;
   margin-bottom: 16px;
+  margin-left: 20px;
+}
+
+.page-header__logo-image {
+  width: 190px;
+  height: 38px;
+}
+
+.page-header__logo-image:hover {
+  opacity: 0.8;
+}
+
+.page-header__logo-image:active {
+  opacity: 0.6;
+}
+
+@media (min-width: @tablet-width) {
+  .page-header {
+    flex-direction: row;
+    justify-content: space-between;
+    width: auto;
+    margin: 0;
+  }
+
+  .page-header__logo {
+    margin-top: 25px;
+    margin-left: 30px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header__logo {
+    margin-top: 60px;
+    margin-left: 110px;
+  }
 }
