--- a/source/less/blocks/radiobutton-input.less
+++ b/source/less/blocks/radiobutton-input.less
@@ -1,14 +1,55 @@
 .radiobutton-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .order-reset();
-  margin-bottom: 13px;
+}
 
-  &:last-child {
-    margin-bottom: 0;
-  }
+.radiobutton-input__item {
+  margin-bottom: 13px;
 }
 
 .radiobutton-input__label {
+  flex-grow: 1;
+  padding-top: 7px;
+  padding-bottom: 5px;
+  padding-left: 46px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 18px;
+}
+
+@media (min-width: @tablet-width) {
+  .radiobutton-input {
+    width: 630px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin: 0 auto;
+    border: 1px solid #cdcdcd;
+  }
+
+  .radiobutton-input__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .radiobutton-input__label {
+    padding-left: 88px;
+    padding-top: 13px;
+    padding-bottom: 12px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .radiobutton-input {
+    width: 571px;
+    margin: 0;
+    padding-top: 38px;
+    padding-bottom: 35px;
+  }
+
+  .radiobutton-input__item {
+    margin-bottom: 23px;
+  }
 }
