--- a/source/less/blocks/textarea-field.less
+++ b/source/less/blocks/textarea-field.less
@@ -3,9 +3,22 @@
   padding: 0;
   padding-top: 15px;
   padding-left: 16px;
-  width: 100%;
+  width: 280px;
   border: 1px solid #ededed;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
+}
+
+@media (min-width: @tablet-width) {
+  .textarea-field {
+    width: 630px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .textarea-field {
+    width: 1220px;
+  }
 }
