--- a/source/less/blocks/toggle.less
+++ b/source/less/blocks/toggle.less
@@ -5,11 +5,16 @@
 .toggle__label {
   font-size: 16px;
   line-height: 20px;
-  font-weight: 400;
   text-transform: uppercase;
 }
 
 .toggle__button {
   padding: 0;
   margin: 39px 18px;
+}
+
+@media (min-width: @desktop-width) {
+  .toogle__button {
+    margin-bottom: 75px;
+  }
 }
