--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,17 +8,10 @@
     url("../fonts/oswaldregular.woff2") format("woff2");
 }
 
-body {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  background-color: #ffffff;
-  font-family: "Oswald", "Arial", sans-serif;
-  color: #000000;
-}
-
 // Подключение файлов стилей
 
+@import "basis.less";
+@import "variables.less";
 @import "blocks/visually-hidden.less";
 @import "mixins.less";
 @import "blocks/button.less";
